# fmodDemo

app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  README.txt  convolution_reverb.cpp  effect.cpp
app/src/main/cpp/fmod/: common.cpp  common.h  convolution_reverb.cpp  effects.cpp  gapless_playback.cpp  net_stream.cpp  play_sound.cpp
app/src/main/java/cn/onestravel/ndk/playsound/: EffectActivity.java
app/src/main/java/org/fmod/core/: FmodUtils.java
app/src/main/res/layout/: activity_effect.xml
app/src/main/res/values/: strings.xml
